[tool.poetry]
name = "odpy"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.2.3"
numpy = "^2.2.0"
statistics = "^1.0.3.5"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
